# api

./: .gitignore  Cargo.toml  README.md  Rocket.toml
resources/ddl/sql/: 01-restaurant_detail.sql  02-feature.sql  03-tag.sql  04-featured_by.sql  05-tagged.sql  06-location.sql  07-located.sql
resources/docker/: api-debug  api-release  api.yaml  mysql  neo4j  storage.yaml
resources/local/: start.sh  stop.sh
src/: db.rs  main.rs  models.rs  routes.rs
src/_diesel/: schema.rs
src/db/: connection.rs  mod.rs
src/db/diesel/: schema.rs
src/db/diesel/client/: restaurant.rs
src/db/neo4j/client/: links.rs
src/graphql/: schema.rs
test/resources/cypher/: 01-restaurant-links.cypher
test/resources/mysql/: 01-seed-data.sql
