[package]
name = "api"
version = "0.1.0"
authors = ["Brett Spradling <bspradling@godaddy.com>"]
edition = "2018"

[dependencies]
juniper = "0.11.1"
juniper_rocket = "0.2.0"
rocket = "0.4.0-rc.1"
rusted_cypher = "1.1.0"
serde = "1.0.90"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["cypher_pool"]